...
            !favoritosLista.itens.contains(itemNo)
                ? favoritosLista.add(itemNo)
                : favoritosLista.remove(itemNo);
            ScaffoldMessenger.of(context).showSnackBar(
              SnackBar(
                content: Text(favoritosLista.itens.contains(itemNo)
                    ? 'Adicionado aos favoritos'
                    : 'Removido dos favoritos'),
                duration: const Duration(seconds: 1),
              ),
            );
          },
        )
...
